src/components/CV/Globe/Globe.module.css
.globeSection {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -7rem;
  padding-top: 2rem;
}

.canvasContainer {
  position: relative;
  min-width: 25vw;
  height: 40vh;
  border-radius: 25%;
}

.canvas {
  width: 100%;
  height: 100%;
  bottom: 0;
}

@media screen and (max-width: 768px) {
  .globeSection {
    margin-top: -6rem;
  }
}

